Update the reading list

--- a/project.html
+++ b/project.html
@@ -81,15 +81,27 @@
         <h1>Projects</h1>
       </header>
       <ul>
-        <li><a href="https://github.com/Skchoudhary/2pie" target="_blank">2 Pi</a>: Slack bot to ease out the onboarding process for the new employee in the team. Technologies used are Python,
-          Flask, and Slack API's [IN PROGRESS]</li>
-        <li><a href="https://github.com/Skchoudhary/Lazy-Click" target="_blank">Lazy Click</a>: Chrome App to handle the Google Meet audio and video control with a single click of a button.
-          Technologies used Javascript.</li>
-        <li>OTT Share: Still in the planning phase, building a platform to share your OTT subscription with other people.
-          Technologies used Python, Django, Django REST Framework, Vue.js, MySQL [IN PROGRESS]</li>
-        <li><a href="https://github.com/Skchoudhary/connect" target="_blank">Connect</a>: Helps in establish the SSH connection to your servers in a blink, easy to configure and setup. The technology used
-          Bash and JSON Processor</li>
-        <li><a href="https://blogs.dgplug.org/sandeepk/automatic-notification-for-the-laptop-battery-level" target="_blank">Battery Notify</a>: Bash script to notify the battery level of the laptop.</li>
+        <li>
+          <a href="https://timepasswebsites.lol/" target="_blank">Timepass website</a>: Curated app's from around the world to amaze you.
+        </li>
+        <li>
+          <a href="https://www.bookmarkoftheday.xyz/" target="_blank">Bookmark of the day</a>: Chrome extension app to revisit your Bookmarks like a pro!
+        </li>
+        <li>
+          <a href="https://github.com/Skchoudhary/2pie" target="_blank">2 Pi</a>: Slack bot to ease out the onboarding process for the new employee in the team. Technologies used are Python, Flask, and Slack API's [On Hold]
+        </li>
+        <li>
+          <a href="https://github.com/Skchoudhary/Lazy-Click" target="_blank">Lazy Click</a>: Chrome App to handle the Google Meet audio and video control with a single click of a button. Technologies used Javascript.
+        </li>
+        <li>
+          OTT Share: Still in the planning phase, building a platform to share your OTT subscription with other people. Technologies used Python, Django, Django REST Framework, Vue.js, MySQL [On Hold]
+        </li>
+        <li>
+          <a href="https://github.com/Skchoudhary/connect" target="_blank">Connect</a>: Helps in establishing the SSH connection to your servers in a blink, easy to configure and setup. The technology used Bash and JSON Processor.
+        </li>
+        <li>
+          <a href="https://blogs.dgplug.org/sandeepk/automatic-notification-for-the-laptop-battery-level" target="_blank">Battery Notify</a>: Bash script to notify the battery level of the laptop.
+        </li>
       </ul>
     </div>
   </main>
