--- a/reading-list-technical.html
+++ b/reading-list-technical.html
@@ -53,6 +53,11 @@
       <header>
         <h1>Books I've read.</h1>
       </header>
+      <h2 id="2023">2023</h2>
+      <ul>
+        <li>The Mythical Man-Month by Fred Brooks [Reading]</li>
+      </ul>
+
       <h2 id="2021">2021</h2>
       <ul>
         <li>Django for APIs by William S. Vincent</li>
