--- a/reading-list.html
+++ b/reading-list.html
@@ -54,13 +54,17 @@
         <h1>Books I've read.</h1>
       </header>
       <p>For technical book check <a href="reading-list-technical.html">here</a></p>
+      <h2 id="2021">2023</h2>
+      <ul>
+        <li>Greenmantle by John Buchan[Reading]</li>
+        <li>The Diary of a Young Girl by Anne Frank</li>
+      </ul>
       <h2 id="2021">2021</h2>
       <ul>
         <li>Steal Like an Atrist by Austin Kleon</li>
         <li>The Alchemist by Paulo Coelho</li>
         <li>Stillness is the key by Ryan Holiday</li>
         <li>The art of saying NO by Damon Zahariades</li>
-        <li>Stillness is the key by Ryan Holiday</li>
         <li>The Total Money Makeover by Dave Ramsey</li>
         <li>Deep Work by Carl Newport</li>
         <li>How to live on 24 hours a day by Bennett Arnold</li>
