update reading list

--- a/reading-list-technical.html
+++ b/reading-list-technical.html
@@ -55,7 +55,7 @@
       </header>
       <h2 id="2023">2023</h2>
       <ul>
-        <li>The Mythical Man-Month by Fred Brooks [Reading]</li>
+        <li>The Mythical Man-Month by Fred Brooks</li>
       </ul>
 
       <h2 id="2021">2021</h2>
