update reading list

--- a/reading-list.html
+++ b/reading-list.html
@@ -64,9 +64,8 @@
         <li>Greenmantle by John Buchan</li>
         <li>The Diary of a Young Girl by Anne Frank</li>
         <li>How to Win Friends and Influence People by Dale Carnegie</li>
-        <li>Anything You Want: 40 Lessons for a New Kind of Entrepreneur 40 Lessons for a New Kind of Entrepreneur by
-          Sivers, Derek</li>
-        <li>Not Fade Away: A Short Life Well Lived A Short Life Well Lived by Shames, Laurence, Barton, Peter</li>
+        <li>Anything You Want: 40 Lessons for a New Kind of Entrepreneur by Sivers, Derek</li>
+        <li>Not Fade Away: A Short Life Well Lived by Shames, Laurence, Barton, Peter</li>
         <li>Greenlights by McConaughey</li>
       </ul>
       <h2 id="2021">2021</h2>
